--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     implementation 'com.firebaseui:firebase-ui-firestore:6.2.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 }
-
