--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OnDemandActivity"/>
-        <activity android:name=".ContinuousLocActivity" />
+        <activity
+            android:name=".OnDemandActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ContinuousLocActivity"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
